--- a/twosides.html
+++ b/twosides.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title> Big Cats </title>
-	<link href="styles/main.css" rel="stylesheet">
+	<link href="styles/twosides.css" rel="stylesheet">
 </head>
 
 <body>
